--- a/src/app/navigation-bar/navigation-bar.component.scss
+++ b/src/app/navigation-bar/navigation-bar.component.scss
@@ -1,25 +1,28 @@
-.grid-container {
-  display: grid;
-  grid-template-rows: 100px 1fr;
-  grid-auto-flow: row;
-  background-color: #2196F3;
+.navbar {
+  background-color: #2196f3;
+  text-align: center;
+  padding: 8px 0;
+  font-size: 30px;
+  width: 100vw;
+  box-shadow: 0 0 5px black;
+  z-index: 10;
+  position: fixed;
+  height: 84px;
+  top: 0;
+  right: 0;
+  left: 0;
 
-  .navbar {
-    background-color: rgba(255, 255, 255, 0.8);
-    text-align: center;
-    padding: 20px 0;
-    font-size: 30px;
-    width: 100vw;
-    box-shadow: 0 0 5px black;
-    z-index: 1;
-
-    img {
-      height: 80%;
-    }
+  img {
+    height: 80%;
   }
+}
 
-  .content-wrapper {
-    overflow: auto;
-    height: calc(100vh - 100px);
-  }
+.content-wrapper {
+  padding-top: 100px;
+  position: relative;
+  min-height: 100%;
+  height: auto !important;
+  max-width: 100%;
+  margin: 0;
+  z-index: 1;
 }
