--- a/src/app/navigation-bar/navigation-bar.component.html
+++ b/src/app/navigation-bar/navigation-bar.component.html
@@ -1,5 +1,5 @@
 <div class="navbar">
-  <img src="https://cataas.com/cat/hat">
+  <img src="https://cataas.com/cat/hat"> NG Playground
 </div>
 <div class="content-wrapper">
   <ng-content></ng-content>
