--- a/src/app/navigation-bar/navigation-bar.component.scss
+++ b/src/app/navigation-bar/navigation-bar.component.scss
@@ -1,28 +1,31 @@
 .navbar {
   background-color: #2196f3;
-  text-align: center;
-  padding: 8px 0;
+  padding: 8px 10px;
   font-size: 30px;
   width: 100vw;
   box-shadow: 0 0 5px black;
   z-index: 10;
   position: fixed;
-  height: 84px;
+  height: 50px;
   top: 0;
   right: 0;
   left: 0;
+  display: flex;
+  align-items: center;
 
   img {
     height: 80%;
+    padding: 0 8px 0 0;
   }
 }
 
 .content-wrapper {
-  padding-top: 100px;
+  padding-top: 64px;
   position: relative;
   min-height: 100%;
   height: auto !important;
   max-width: 100%;
   margin: 0;
   z-index: 1;
+  background-color: #2196f3;
 }
