--- a/src/app/picture-grid/picture-grid.component.html
+++ b/src/app/picture-grid/picture-grid.component.html
@@ -1,23 +1,6 @@
 <div class="grid-container">
-  <div class="item">
-    <img src="https://cataas.com/cat/hat">
-  </div>
-  <div class="item">
-    <img src="https://cataas.com/cat">
-  </div>
-  <div class="item">
-    <img src="https://cataas.com/cat/cute">
-  </div>
-  <div class="item">
-    <img src="https://cataas.com/cat/cute">
-  </div>
-  <div class="item">
-    <img src="https://cataas.com/cat/cute">
-  </div>
-  <div class="item">
-    <img src="https://cataas.com/cat/cute">
-  </div>
-  <div class="item">
-    <img src="https://cataas.com/cat/cute">
+  <div *ngFor="let tag of tags" class="item">
+    <img [src]="'https://cataas.com/cat/' + tag" (click)=catClicked()>
+    <span>{{ tag }}</span>
   </div>
 </div>
