--- a/src/app/picture-grid/picture-grid.component.scss
+++ b/src/app/picture-grid/picture-grid.component.scss
@@ -1,23 +1,30 @@
+@import "../layout.mixins";
+
 .grid-container {
+  display: grid;
+  grid-template-columns: 5px 1fr 5px;
+  grid-gap: 10px;
+  padding: 10px;
+
   .item {
     grid-column: 2;
+    display: flex;
+    flex-direction: column;
   }
-  @media screen and (min-width: 768px) {
+
+  @include bp-tablet-min() {
     .item {
       grid-column: auto;
     }
     grid-template-columns: 1fr 1fr 1fr;
   }
-  @media screen and (min-width: 1024px) {
+
+  @include bp-desktop-min() {
     .item {
       grid-column: auto;
     }
     grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
   }
-  display: grid;
-  grid-template-columns: 5px 1fr 5px;
-  grid-gap: 10px;
-  padding: 10px;
 
   > div {
     background-color: rgba(255, 255, 255, 0.8);
@@ -25,9 +32,12 @@
     padding: 20px 0;
     font-size: 30px;
     height: 120px;
+    color: darkslategray;
+    box-shadow: 0 0 3px darkslategrey;
 
     img {
       height: 80%;
+      object-fit: contain;
     }
   }
 }
