Layout and cleanup

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -5,8 +5,9 @@
   </p>
 </section>
 <section>
-
+  I use this place to test out web technologies with a focus on Angular 2+
 </section>
+<div style="flex: 1"></div>
 <footer>
   Special thanks to <a href="https://cataas.com/#/">Cataas</a>
 </footer>
