--- a/src/app/navigation-bar/navigation-bar.component.scss
+++ b/src/app/navigation-bar/navigation-bar.component.scss
@@ -30,7 +30,7 @@
 .content-wrapper {
   padding-top: 64px;
   position: relative;
-  min-height: 100%;
+  min-height: calc(100% - 64px);
   height: auto !important;
   max-width: 100%;
   margin: 0;
