--- a/src/app/picture-grid/picture-grid.component.html
+++ b/src/app/picture-grid/picture-grid.component.html
@@ -1,3 +1,4 @@
+<div class="navbar"></div>
 <div class="grid-container">
   <div *ngFor="let tag of tags" class="item">
     <img [src]="'https://cataas.com/cat/' + tag" (click)=catClicked()>
