Playing with animations and layout

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -7,6 +7,29 @@
 <section>
   I use this place to test out web technologies with a focus on Angular 2+
 </section>
+<section class="detail-row">
+  <div>
+    <img src="assets/angular.png" alt="Angular">
+    <h2>Angular</h2>
+    <p>
+      Built using the Angular Framework.
+    </p>
+  </div>
+  <div>
+    <img src="assets/vscode.png" alt="VSCode">
+    <h2>VS Code</h2>
+    <p>
+      Developed with VSCode.
+    </p>
+  </div>
+  <div>
+    <img src="assets/GitHub-Mark-Light-64px.png" alt="github">
+    <h2>GitHub Pages</h2>
+    <p>
+      Hosted on GitHub using GitHub Pages.
+    </p>
+  </div>
+</section>
 <div style="flex: 1"></div>
 <footer>
   Special thanks to <a href="https://cataas.com/#/">Cataas</a>
