--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -10,6 +10,8 @@
   max-height: 80vh;
   width: 100%;
   overflow: hidden;
+  margin-bottom: -55px;
+  z-index: -1;
 
   img {
     width: 100%;
@@ -27,11 +29,97 @@
 }
 
 section:not(.spash) {
-  padding: 10px;
+  padding: 10% 10px;
   background: white;
-  color: black;
-  margin: 20px;
-  box-shadow: 0 0 3px black;
+  color: white;
+  margin: 50px 0;
+}
+
+section {
+  &:nth-child(n + 1) {
+    position: relative;
+    background: #2196f3;
+
+    &:before,
+    &:after {
+      background: inherit;
+      content: '';
+      display: block;
+      height: 50%;
+      left: 0;
+      position: absolute;
+      right: 0;
+      transform-origin: 100%;
+      z-index: -1;
+    }
+
+    &:before {
+      top: 0;
+      transform: skewY(1.5deg);
+    }
+
+    &:after {
+      bottom: 0;
+      transform: skewY(-1.5deg);
+    }
+  }
+}
+
+.detail-row {
+  display: grid;
+  grid-template-columns: repeat(1, 1fr);
+
+  img {
+    width: 80px;
+    padding-right: 10px;
+    border-right: 1px solid white;
+    height: 100px;
+    margin: 8px;
+    object-fit: contain;
+    grid-area: icon;
+  }
+
+  > div {
+    display: grid;
+    grid-template-areas:
+      "icon title"
+      "icon details";
+    grid-template-columns: 108px 1fr;
+
+    h2 {
+      grid-area: title;
+    }
+    p {
+      grid-area: details;
+    }
+  }
+
+  @include bp-tablet-min {
+    grid-template-columns: repeat(3, 1fr);
+    justify-items: center;
+
+    img {
+      height: 80px;
+      padding-bottom: 10px;
+      padding-right: 0;
+      border-right: none;
+      border-bottom: 1px solid white;
+    }
+
+    > div {
+      justify-items: center;
+
+      grid-template-areas:
+        "icon"
+        "title"
+        "details";
+      grid-template-columns: 1fr;
+
+      p {
+        text-align: center;
+      }
+    }
+  }
 }
 
 footer {
