--- a/src/app/navigation-bar/navigation-bar.component.html
+++ b/src/app/navigation-bar/navigation-bar.component.html
@@ -1,4 +1,4 @@
-<pg-navigation-menu *ngIf="showMenu" (close)=toggleMenu() (click)=toggleMenu()>
+<pg-navigation-menu [(closed)]=showMenu (click)=toggleMenu()>
   <div class="menu-title">Menu</div>
   <pg-navigation-item label="Home" route=""></pg-navigation-item>
   <pg-navigation-item label="Cat Grid" route="grid"></pg-navigation-item>
