--- a/src/app/navigation-menu/navigation-menu.component.scss
+++ b/src/app/navigation-menu/navigation-menu.component.scss
@@ -1,22 +1,17 @@
-:host {
+:host > div {
   position: fixed;
   height: 100vh;
   width: calc(100vw + 300px);
-  left: 0;
   top: 0;
   bottom: 0;
   z-index: 12;
   background: rgba(255, 255,255, .8);
   display: grid;
   grid-template-columns: 300px 1fr;
-  transition: 300ms ease-in;
-  left: -300px;
 
-  &.loaded {
-    left: 0;
-  }
   .menu {
     background-color: #2196f3;
     overflow: hidden;
+    height: 100%;
   }
 }
