--- a/src/app/navigation-bar/navigation-bar.component.html
+++ b/src/app/navigation-bar/navigation-bar.component.html
@@ -2,6 +2,7 @@
   <div class="menu-title">Menu</div>
   <pg-navigation-item label="Home" route=""></pg-navigation-item>
   <pg-navigation-item label="Cat Grid" route="grid"></pg-navigation-item>
+  <pg-navigation-item label="Drag and Drop" route="grid/drag-and-drop"></pg-navigation-item>
 </pg-navigation-menu>
 <div class="navbar">
   <img (click)=toggleMenu() src="https://cataas.com/cat/hat"> NG Playground
