manual moves and responsive board

--- a/src/app/lazy/drag-and-drop/drag-and-drop.component.html
+++ b/src/app/lazy/drag-and-drop/drag-and-drop.component.html
@@ -10,6 +10,7 @@
         class="game-peice"
         draggable="true"
         (dragstart)="dragStart($event, r, c)"
+        (click)="manual($event, r, c)"
       >
         <span [ngClass]="square?.color">{{ square && square.icon }}</span>
       </div>
