--- a/src/app/lazy/drag-and-drop/drag-and-drop.component.scss
+++ b/src/app/lazy/drag-and-drop/drag-and-drop.component.scss
@@ -1,13 +1,29 @@
-.header {
-  height: 80px;
-  background: black;
+@import '../../layout.mixins';
+
+@include bp-tablet-min {
+  .header {
+    height: 80px;
+    background: black;
+  }
 }
 
 .game-board {
   display: grid;
   grid-template-rows: repeat(8, 1fr);
   height: calc(100vh - 80px);
+  margin: auto;
   width: 100vw;
+  height: 100vw;
+
+  @media screen and (orientation:portrait) and (min-width: 900px) {
+    width: calc(100vh - 80px);
+    height: calc(100vh - 80px);
+  }
+
+  @media screen and (orientation:landscape) and (min-width: 600px)  {
+    width: calc(100vh - 80px);
+    height: calc(100vh - 80px);
+  }
 
   .game-peice {
     height: 100%;
@@ -20,8 +36,6 @@
     grid-template-columns: repeat(8, 1fr);
     color: rgb(110, 30, 30);
     span {
-      // text-shadow: 0 0 5px black;
-
       &.white {
         color: white;
         text-shadow: 0 0 5px black;
