--- a/src/app/lazy/drag-and-drop/drag-and-drop.component.scss
+++ b/src/app/lazy/drag-and-drop/drag-and-drop.component.scss
@@ -2,8 +2,9 @@
 
 @include bp-tablet-min {
   .header {
-    height: 80px;
+    height: 64px;
     background: black;
+    margin-bottom: 8px;
   }
 }
 
