--- a/src/app/lazy/drag-and-drop/drag-and-drop.component.scss
+++ b/src/app/lazy/drag-and-drop/drag-and-drop.component.scss
@@ -35,7 +35,7 @@
   > div {
     display: grid;
     grid-template-columns: repeat(8, 1fr);
-    color: rgb(110, 30, 30);
+
     span {
       &.white {
         color: white;
@@ -45,6 +45,9 @@
         color: black;
         text-shadow: 0 0 5px white;
       }
+    }
+    .square {
+      position: relative;
     }
     &:nth-child(even) {
       .square {
