--- a/src/app/lazy/drag-and-drop/drag-and-drop.component.scss
+++ b/src/app/lazy/drag-and-drop/drag-and-drop.component.scss
@@ -32,6 +32,7 @@
   .game-peice {
     height: 100%;
     text-align: center;
+    transform: translate(0,0); // remove background on dnd.
   }
 
   > div {
@@ -55,6 +56,7 @@
       .square {
         &:nth-child(even) {
           color: white;
+          // background: transparent;
           background: rgb(110, 30, 30);
         }
       }
@@ -63,6 +65,7 @@
       .square {
         &:nth-child(odd) {
           color: white;
+          // background: transparent;
           background: rgb(110, 30, 30);
         }
       }
