More cat pictures and style update

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -4,7 +4,7 @@
     Welcome to my Angular playground.
   </p>
 </section>
-<section>
+<section [style.text-align]="'center'">
   I use this place to test out web technologies with a focus on Angular 2+
 </section>
 <section class="detail-row">
