--- a/src/app/lazy/picture-grid/picture-grid.component.html
+++ b/src/app/lazy/picture-grid/picture-grid.component.html
@@ -1,7 +1,7 @@
 <div class="navbar"></div>
 <div class="grid-container">
-  <div *ngFor="let tag of tags" class="item">
-    <img [src]="'https://cataas.com/cat/' + tag" (click)=catClicked()>
+  <div *ngFor="let tag of tags; index as i;" class="item">
+    <img [src]="'https://cataas.com/cat/' + tag + '?timestamp=' + i" (click)=catClicked()>
     <span>{{ tag }}</span>
   </div>
 </div>
