--- a/src/app/lazy/picture-grid/picture-grid.component.scss
+++ b/src/app/lazy/picture-grid/picture-grid.component.scss
@@ -44,7 +44,7 @@
 @include bp-tablet-min() {
   .navbar {
     height: 80px;
-    background: #2196f3;
+    background: #1278ca;
     transform: skewY(1.5deg);
     margin-top: -20px;
     margin-bottom: 10px;
