--- a/src/app/navigation-bar/navigation-bar.component.scss
+++ b/src/app/navigation-bar/navigation-bar.component.scss
@@ -5,7 +5,7 @@ $navbar-large-height: 50px;
 $navbar-padding: 8px;
 
 .navbar {
-  background-color: #2196f3;
+  background-color: #1278ca;
   padding: $navbar-padding 10px;
   font-size: 30px;
   width: calc(100vw - 16px);
