--- a/src/app/navigation-menu/navigation-menu.component.scss
+++ b/src/app/navigation-menu/navigation-menu.component.scss
@@ -10,7 +10,7 @@
   grid-template-columns: 300px 1fr;
 
   .menu {
-    background-color: #2196f3;
+    background-color: #1278ca;
     overflow: hidden;
     height: 100%;
   }
