--- a/src/app/navigation-bar/navigation-bar.component.html
+++ b/src/app/navigation-bar/navigation-bar.component.html
@@ -5,7 +5,7 @@
   <pg-navigation-item label="♕ Drag and Drop" route="grid/drag-and-drop"></pg-navigation-item>
 </pg-navigation-menu>
 <div class="navbar">
-  <img (click)=toggleMenu() src="https://cataas.com/cat/hat" alt="Toggle Menu"> NG Playground
+  <img (click)=toggleMenu() src="https://cataas.com/cat/hat?width=40&height=40" alt="Toggle Menu"> NG Playground
   <div style="flex-grow: 1;"></div>
   <a href="https://github.com/corwinm/angular-playground" target="_blank" rel="noopener">
     <img src="assets/GitHub-Mark-Light-64px.png" alt="github">
