--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,11 +1,15 @@
 <section class="spash">
-  <img *ngIf="!mobile; else mobileSplash" src="https://cataas.com/cat/says/hello%20world!?width=800&height=500" alt="Hello World!">
+  <div *ngIf="!mobile; else mobileSplash">
+    <img src="https://cataas.com/cat/says/hello%20world!?width=800&height=500" alt="Hello World!">
+    <p>
+      Welcome to my Angular playground.
+    </p>
+  </div>
   <ng-template #mobileSplash>
-    <img src="https://cataas.com/cat/says/hello%20world!?width=200&height=125" alt="Hello World!">
+    <div class="mobile-splash">
+      Welcome to my Angular playground.
+    </div>
   </ng-template>
-  <p>
-    Welcome to my Angular playground.
-  </p>
 </section>
 <section [style.text-align]="'center'">
   I use this place to test out web technologies with a focus on Angular 2+
@@ -35,5 +39,17 @@
 </section>
 <div style="flex: 1"></div>
 <footer>
-  Special thanks to <a href="https://cataas.com/#/">Cataas</a>
+  <p>
+    Check out our
+    <a href="https://googlechrome.github.io/lighthouse/viewer/?gist=9be3678061469559278fe2e90a573d23" target="_blank" rel="noopener">
+      Lighthouse score
+    </a>
+  </p>
+  <p>
+    Special thanks to
+    <a href="https://cataas.com/#/" target="_blank" rel="noopener">
+      Cataas
+    </a>
+    😻
+  </p>
 </footer>
