--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -26,6 +26,14 @@
     padding: 5px;
     border-radius: 3px;
   }
+
+  .mobile-splash {
+    height: 200px;
+    text-align: center;
+    text-shadow: 1px 2px 5px black;
+    line-height: 200px;
+    background: linear-gradient(to right, rgb(163, 38, 0), rgb(0, 104, 223));
+  }
 }
 
 section:not(.spash) {
