Icons and basic apple a2hs support

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -8,6 +8,7 @@
   <ng-template #mobileSplash>
     <div class="mobile-splash">
       Welcome to my Angular playground.
+      <span *ngIf=appleInstalled>Thank you for installing my sample app!</span>
     </div>
   </ng-template>
 </section>
