--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,6 +1,6 @@
 <section class="spash">
   <div *ngIf="!mobile; else mobileSplash">
-    <img src="https://cataas.com/cat/says/hello%20world!?width=800&height=500" alt="Hello World!">
+    <img src="assets/image/home-splash.png" alt="Hello World!">
     <p>
       Welcome to my Angular playground.
     </p>
@@ -52,5 +52,8 @@
       Cataas
     </a>
     😻
+  </p>
+  <p>
+    <img [src]="codeBuildUrl" alt="Code Build Status">
   </p>
 </footer>
