--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -38,7 +38,7 @@
 }
 
 section:not(.spash) {
-  padding: 10% 10px;
+  padding: 50px 10px;
   background: white;
   color: white;
   margin: 50px 0;
@@ -60,6 +60,7 @@ section {
       right: 0;
       transform-origin: 100%;
       z-index: -1;
+      box-shadow: 0 0 5px rgb(114, 114, 114);
     }
 
     &:before {
@@ -148,7 +149,7 @@ footer {
   :host:before {
     display: block;
     position: relative;
-    background-image: linear-gradient(to top, transparent 40%, black 120%);
+    background-image: linear-gradient(to top, transparent 0, black 120%);
     margin-bottom: -80px;
     height: 80px;
     width: 100%;
