Add SwUpdate and button to update app.

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,4 @@
 <pg-navigation-bar>
   <router-outlet></router-outlet>
+  <pg-update-available *ngIf="updateAvailable"></pg-update-available>
 </pg-navigation-bar>
