--- a/src/app/navigation/navigation-bar/navigation-bar.component.scss
+++ b/src/app/navigation/navigation-bar/navigation-bar.component.scss
@@ -74,8 +74,14 @@ $navbar-padding: 8px;
   background: #fafafa;
   cursor: pointer;
   transition: background-color 200ms ease-in;
-  
+
   &:hover {
     background: #9b9b9b;
   }
+}
+
+.version-label {
+  text-align: center;
+  font-size: 12px;
+  padding: 4px;
 }
