--- a/src/app/navigation/navigation-menu/navigation-menu.component.scss
+++ b/src/app/navigation/navigation-menu/navigation-menu.component.scss
@@ -5,7 +5,6 @@
   top: 0;
   bottom: 0;
   z-index: 12;
-  background: rgba(255, 255,255, .8);
   display: grid;
   grid-template-columns: 300px 1fr;
 
@@ -15,5 +14,9 @@
     height: 100%;
     display: flex;
     flex-direction: column;
+  }
+
+  .shadow {
+    background: rgba(255, 255,255, .8);
   }
 }
