parallax background just for fun.

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,6 +1,7 @@
+<div class="parallax">
+
 <section class="spash">
   <div *ngIf="!mobile; else mobileSplash">
-    <img src="assets/image/home-splash.png" alt="Hello World!">
     <p>
       Welcome to my Angular playground.
     </p>
@@ -57,3 +58,5 @@
     <img [src]="codeBuildUrl" alt="Code Build Status">
   </p>
 </footer>
+
+</div>
