Update lighthouse score

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -43,16 +43,15 @@
 <footer>
   <p>
     Check out our
-    <a href="https://googlechrome.github.io/lighthouse/viewer/?gist=9be3678061469559278fe2e90a573d23" target="_blank" rel="noopener">
-      Lighthouse score
+    <a href="https://googlechrome.github.io/lighthouse/viewer/?gist=b27394dfa0e94c1b5e20e41a28c2b08f" target="_blank" rel="noopener">
+      💡Lighthouse score 🏠
     </a>
   </p>
   <p>
     Special thanks to
     <a href="https://cataas.com/#/" target="_blank" rel="noopener">
-      Cataas
+      Cataas 😻
     </a>
-    😻
   </p>
   <p>
     <img [src]="codeBuildUrl" alt="Code Build Status">
