--- a/src/app/navigation/navigation-bar/navigation-bar.component.html
+++ b/src/app/navigation/navigation-bar/navigation-bar.component.html
@@ -8,12 +8,13 @@
   <button class="install-btn" *ngIf="promptEvent" (click)="installPwa()">Install</button>
 </pg-navigation-menu>
 <div class="navbar">
-  <pg-navigation-back (click)=goBack()></pg-navigation-back>
-  <pg-navigation-button (click)=toggleMenu()></pg-navigation-button> NG Playground
+  <pg-navigation-back *ngIf=appleInstalled (click)=goBack()></pg-navigation-back>
+  NG Playground
   <div style="flex-grow: 1;"></div>
   <a href="https://github.com/corwinm/angular-playground" target="_blank" rel="noopener">
     <img src="assets/GitHub-Mark-Light-64px.png" alt="github">
   </a>
+  <pg-navigation-button (click)=toggleMenu()></pg-navigation-button>
 </div>
 <div class="content-wrapper">
   <ng-content></ng-content>
