--- a/src/app/navigation/navigation-bar/navigation-bar.component.scss
+++ b/src/app/navigation/navigation-bar/navigation-bar.component.scss
@@ -21,23 +21,16 @@ $navbar-padding: 8px;
 
   > pg-navigation-button {
     height: 60%;
-    margin: 0 8px 0 0;
+    margin: 0 8px 0 16px;
     transition: 200ms ease-in-out;
 
     &:hover {
       transform: scale(1.2);
     }
   }
-  
+
   pg-navigation-back {
     display: none;
-  }
-
-  @media all and (display-mode: standalone) {
-    pg-navigation-back {
-      display: inline;
-      margin-right: 10px;
-    }
   }
 
   a {
@@ -45,6 +38,7 @@ $navbar-padding: 8px;
 
     img {
       height: 100%;
+      display: block;
     }
   }
 }
