--- a/src/app/navigation/navigation-button/navigation-button.component.html
+++ b/src/app/navigation/navigation-button/navigation-button.component.html
@@ -1,5 +1,5 @@
 <svg viewBox="0 0 40 40">
-  <circle cx="20" cy="5" r="5" fill="white" />
-  <circle cx="20" cy="20" r="5" fill="white" />
-  <circle cx="20" cy="35" r="5" fill="white" />
+  <line x1="0" y1="5" x2="40" y2="5" style="stroke:white;stroke-width:4" />
+  <line x1="0" y1="20" x2="40" y2="20" style="stroke:white;stroke-width:4" />
+  <line x1="0" y1="35" x2="40" y2="35" style="stroke:white;stroke-width:4" />
 </svg>
