--- a/src/app/navigation/navigation-item/navigation-item.component.html
+++ b/src/app/navigation/navigation-item/navigation-item.component.html
@@ -1,3 +1,3 @@
-<a [routerLink]="[route]">
+<a [routerLink]="[route]" routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}">
   {{ label }}
 </a>
