--- a/src/app/navigation/navigation-item/navigation-item.component.scss
+++ b/src/app/navigation/navigation-item/navigation-item.component.scss
@@ -7,9 +7,12 @@
     padding: 0 10px;
     display: block;
     text-decoration: none;
-    color: white;
+    color: rgb(39, 39, 39);
     transition: background-color 200ms ease-in;
-
+    border-bottom: 1px solid rgba(175, 175, 175, 0.5);
+    &.active {
+      background-color: rgba(0, 0, 0, 0.11);
+    }
     &:hover {
       background-color: rgba(0,0,0,0.3);
     }
