Update back button design

--- a/src/app/navigation/navigation-back/navigation-back.component.html
+++ b/src/app/navigation/navigation-back/navigation-back.component.html
@@ -1,13 +1,4 @@
-<svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" preserveAspectRatio="xMidYMid meet"
-  viewBox="0 0 640 640" width="640" height="640">
-  <defs>
-    <path d="M310.6 0L0 321.55L310.6 643.09L310.6 439.25L640 439.25L640 203.32L310.6 203.32L310.6 0Z" id="c2qICmT136"></path>
-  </defs>
-  <g>
-    <g>
-      <g>
-        <use xlink:href="#c2qICmT136" opacity="1" fill="#ffffff" fill-opacity="1"></use>
-      </g>
-    </g>
-  </g>
+<svg viewBox="0 0 20 40">
+  <line x1="2" y1="20" x2="18" y2="2" style="stroke:white;stroke-width:4" />
+  <line x1="2" y1="20" x2="18" y2="38" style="stroke:white;stroke-width:4" />
 </svg>
