title links to homepage

--- a/src/app/navigation/navigation-bar/navigation-bar.component.html
+++ b/src/app/navigation/navigation-bar/navigation-bar.component.html
@@ -9,7 +9,7 @@
 </pg-navigation-menu>
 <div class="navbar">
   <pg-navigation-back *ngIf=appleInstalled (click)=goBack()></pg-navigation-back>
-  NG Playground
+  <span routerLink="/" style="outline: none;">NG Playground</span>
   <div style="flex-grow: 1;"></div>
   <a href="https://github.com/corwinm/angular-playground" target="_blank" rel="noopener">
     <img src="assets/GitHub-Mark-Light-64px.png" alt="github">
