--- a/src/app/navigation/navigation-back/navigation-back.component.html
+++ b/src/app/navigation/navigation-back/navigation-back.component.html
@@ -1,4 +1,4 @@
 <svg viewBox="0 0 20 40">
-  <line x1="2" y1="20" x2="18" y2="2" style="stroke:white;stroke-width:4" />
-  <line x1="2" y1="20" x2="18" y2="38" style="stroke:white;stroke-width:4" />
+  <polyline points="18,38 2,20 18,2"
+    fill="none" stroke="white" style="stroke-width: 4" />
 </svg>
