Use smaller image

--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -5,7 +5,7 @@
   min-height: 100vh;
   flex-direction: column;
 
-  background: url('../../assets/image/home-splash.png');
+  background: url('/assets/image/home-splash.jpg');
   position: relative;
   background-attachment: fixed;
   background-position: top;
