trying link rel=preconnect

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,3 +1,6 @@
+<link rel="preconnect" href="https://s3.amazonaws.com">
+<link rel="preconnect" href="https://codebuild.us-east-1.amazonaws.com">
+
 <div class="parallax">
 
 <section class="spash">
