--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,6 @@
 <pg-navigation-bar>
-  <router-outlet></router-outlet>
+  <pg-router-transitions>
+    <router-outlet></router-outlet>
+  </pg-router-transitions>
   <pg-update-available *ngIf="updateAvailable"></pg-update-available>
 </pg-navigation-bar>
