--- a/src/app/navigation/navigation-bar/navigation-bar.component.scss
+++ b/src/app/navigation/navigation-bar/navigation-bar.component.scss
@@ -53,10 +53,12 @@ $navbar-padding: 8px;
   box-shadow: 0 0 5px black;
 }
 
+$padding-top: ($navbar-small-height + $navbar-padding * 2);
+
 .content-wrapper {
-  padding-top: $navbar-small-height + $navbar-padding * 2;
+  padding-top: $padding-top;
   position: relative;
-  min-height: calc(100% - $navbar-small-height + $navbar-padding * 2);
+  min-height: calc(100% - #{$padding-top});
   height: auto !important;
   max-width: 100%;
   margin: 0;
