--- a/src/app/navigation/navigation-item/navigation-item.component.html
+++ b/src/app/navigation/navigation-item/navigation-item.component.html
@@ -1,3 +1,6 @@
-<a [routerLink]="[route]" routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}">
+<a
+  [routerLink]="[route]"
+  routerLinkActive="active"
+  [routerLinkActiveOptions]="{exact: true}">
   {{ label }}
 </a>
