--- a/src/app/router-transitions/router-transitions.component.scss
+++ b/src/app/router-transitions/router-transitions.component.scss
@@ -6,8 +6,8 @@
   ::ng-deep {
     router-outlet ~ * {
       position: absolute;
-      height: 100%;
-      width: 100%;
+      min-height: 100%;
+      min-width: 100%;
       background: white;
       box-shadow: 0 0 10px black;
     }
@@ -15,5 +15,5 @@
 }
 
 main {
-  height: 100vh;
+  height: 100%;
 }
